# crevdem

./: .gitignore  README.md  environment.yml  setup.cfg
notebooks/: crevdem_workflow.ipynb  variogram_notebook.ipynb
src/crevdem/: __init__.py  _utils.py  datasets.py  finder.py  load.py  preprocess.py
supp_data/: README.md  download_grimp_2015_15m.py
