[metadata]
name = crevdem
version = 0.1.0
author = Tom Chudley
author_email = thomas.r.chudley@durham.ac.uk
url = https://github.com/trchudley/crevdem
description = "Tools for extracting crevasse location and volume from high-resolution digital elevation models."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geospatial, elevation, arcticdem, rema, dem
license = MIT
classifiers =
    # https://pypi.org/classifiers/
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing

[options]
# package_dir = src
python_requires = >=3.7
install_requires =
  rioxarray
  rasterio
  shapely
  numpy
  opencv-python

# [options.packages.find]
# where = src

[options.extras_require]
variograms = 
    scikit-gstat
    geopandas
    scikit-learn
    scipy
    matplotlib
